err/aliyuncli.err
Listing '.'...
Listing './bin'...
Compiling './bin/jp.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aliyuncli'...
Listing './lib/python3.5/site-packages/aliyuncli/advance'...
Compiling './lib/python3.5/site-packages/aliyuncli/advance/ecsExportHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/advance/ecsExportHandler.py", line 55
    print 'Filename is needed'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/advance/ecsImportHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/advance/ecsImportHandler.py", line 19
    print "A profile is needed! please use \'--filename\' and add the profile name."
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/advance/rdsExportHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/advance/rdsExportHandler.py", line 80
    print 'Filename is needed'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/advance/rdsImportHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/advance/rdsImportHandler.py", line 61
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aliyuncli/advance/userConfigHandler.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (userConfigHandler.py, line 26)
Compiling './lib/python3.5/site-packages/aliyuncli/advance/userProfileHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/advance/userProfileHandler.py", line 27
    print "Do your forget profile name? please use \'--name\' and add the profile name."
                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunCliHelp.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunCliHelp.py", line 27
    print "usage: aliyuncli <command> <operation> [options and parameters]"
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunCliMain.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunCliMain.py", line 92
    print 'accesskeyid/accesskeysecret/regionId is absence'
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunCliUpgrade.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunCliUpgrade.py", line 171
    print upgradeHandler.checkForUpgrade()
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunExtensionCliHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunExtensionCliHandler.py", line 130
    print color.bold+"ALIYUNCLI()"+color.end
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunOpenApiData.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunOpenApiData.py", line 287
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/aliyunSdkConfigure.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/aliyunSdkConfigure.py", line 47
    print "A argument is needed! please use \'--version\' and add the sdk version."
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/commandConfigure.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/commandConfigure.py", line 96
    print configure.showExtensionOperationHelp("ecs", "ExportInstance")
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aliyuncli/configure.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/configure.py", line 580
    print 'The correct usage:aliyuncli configure get key --profile profilename'
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/handleEndPoint.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/handleEndPoint.py", line 5
    print 'RegionId/EndPoint is absence'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aliyuncli/oasadp'...
Compiling './lib/python3.5/site-packages/aliyuncli/oasadp/oasHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/oasadp/oasHandler.py", line 114
    print 'Answer is No. Quit now'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aliyuncli/ossadp'...
Compiling './lib/python3.5/site-packages/aliyuncli/ossadp/ossHandler.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/ossadp/ossHandler.py", line 145
    print "Error Headers:\n"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyuncli/paramOptimize.py'...
***   File "./lib/python3.5/site-packages/aliyuncli/paramOptimize.py", line 64
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aliyuncli-2.1.5.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/jmespath'...
Listing './lib/python3.5/site-packages/jmespath-0.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
